fix: loosen TypeScript strictness for build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "skipLibCheck": true,
+    "noEmit": false,
+    "noImplicitAny": false,
     "strict": false,
-    "noImplicitAny": false
+    "skipLibCheck": true
   }
 }
