--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,9 +16,11 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "strict": false,                     
+    "noImplicitAny": false,              
+    "noUnusedLocals": false,          
+    "noUnusedParameters": false,        
+
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
