--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,12 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "noEmit": false,
-    "noImplicitAny": false,
     "strict": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": false,
+    "noUncheckedSideEffectImports": false,
+    "erasableSyntaxOnly": false
   }
 }
