--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,7 @@
     "jsx": "react-jsx",
 
     /* Linting */
+    "noImplicitAny": false,
     "strict": false,                     
     "noImplicitAny": false,              
     "noUnusedLocals": false,          
